# basicGUI

./: CMakeLists.txt  README.md
include/: keyvalues.hpp  mygui.hpp
src/: main.cpp  mygui.cpp
